--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Page</title>
+        <title>Sample HTML for Scraping</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <p>I am a member of the AOB where I play clarinet.
-            <br> I have been playing for 10 years.</p>
-        </p>
+        <h1>Product List</h1>
+
+        <div class="product">
+            <span class="name">Wireless Mouse</span>
+            <span class="price">$25.99</span>
+        </div>
+
+        <div class="product">
+            <span class="name">USB Keyboard</span>
+            <span class="price">$19.49</span>
+        </div>
+
+        <div class="product">
+            <span class="name">HD Monitor</span>
+            <span class="price">$129.99</span>
+        </div>
+    </body>
 </html>
